Fix /ready details on small screens
If description (for example) had a long line of continuous text it was
causing problems on my phone screen. Also ensured that the preview image
doesn't cause the same problem by limiting it to the size of the screen
width.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -61,10 +61,11 @@ button {
 }
 
 .details > .thumbnail {
-  max-width: 300px;
+  max-width: min(300px, 100vw);
 }
 .details > .detail {
   margin-top: 4px;
+  overflow-wrap: anywhere;
 }
 
 .keep-newlines {
